--- a/admin/.env
+++ b/admin/.env
@@ -1,3 +1,5 @@
-REACT_APP_CLOUDINARY_CLOUD_NAME=Assignment_03_node
-REACT_APP_CLOUDINARY_API_KEY=649413291991765
-REACT_APP_CLOUDINARY_API_SECRET=TiUYQ_KywDr0Ycc-9f_RBAj3xPI
+VITE_CLOUDINARY_CLOUD_NAME=Assignment_03_node
+VITE_CLOUDINARY_API_KEY=649413291991765
+VITE_CLOUDINARY_API_SECRET=TiUYQ_KywDr0Ycc-9f_RBAj3xPI
+
+VITE_BACKEND_URL=http://localhost:5000/api
