--- a/admin/package.json
+++ b/admin/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "redux-saga": "^1.2.3",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
