--- a/admin/.env
+++ b/admin/.env
@@ -3,3 +3,4 @@ VITE_CLOUDINARY_API_KEY=649413291991765
 VITE_CLOUDINARY_API_SECRET=TiUYQ_KywDr0Ycc-9f_RBAj3xPI
 
 VITE_BACKEND_URL=http://localhost:5000/api
+VITE_IMG_BASE_URL=http://localhost:5000
