--- a/admin/package.json
+++ b/admin/package.json
@@ -9,9 +9,6 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -35,6 +32,7 @@
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
+    "vite-jsconfig-paths": "^2.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
