check product quantity

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
-REACT_APP_BACKEND_URL=https://node-assignment03.onrender.com/api
-REACT_APP_IMG_BASE_URL=https://node-assignment03.onrender.com
+# REACT_APP_BACKEND_URL=https://node-assignment03.onrender.com/api
+# REACT_APP_IMG_BASE_URL=https://node-assignment03.onrender.com
+
+REACT_APP_BACKEND_URL=http://localhost:5000/api
+REACT_APP_IMG_BASE_URL=http://localhost:5000
