--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
-  },"engines": {
+  },
+  "engines": {
     "node": ">=16.0.0"
   },
   "dependencies": {
@@ -23,5 +24,12 @@
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
-  }
+  },
+  "name": "backend",
+  "description": "- Name: Ecommerce Shop - Backend\r - Technology: Nodejs(Expressjs), Mongodb-Mongoose, jsonwebtoken, multer, nodemailer, express validator",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
